--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    
+    <p class="expression"></p>
+    <p class="value"></p>
+    <button>0</button>
+    <button>1</button>
+    <button>2</button>
+    <button>3</button>
+    <button>4</button>
+    <button>5</button>
+    <button>6</button>
+    <button>7</button>
+    <button>8</button>
+    <button>9</button>
+    <button>+</button>
+    <button>-</button>
+    <button>*</button>
+    <button>/</button>
+    <button>=</button>
 </body>
 </html>
