--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <p class="expression">0</p>
-    <p class="value"></p>
+    <p class="result"></p>
     <section class="buttons">
         <button>0</button>
         <button>1</button>
