--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <p class="expression">0</p>
+    <p class="expression"></p>
     <p class="result"></p>
     <section class="buttons">
         <button>0</button>
